infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hackalem
  labels:
    app.kubernetes.io/part-of: hackalem
